// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Injects docgen result as __docgenInfo property 1`] = `
Object {
  "description": "",
  "displayName": "basic-sfc",
  "exportName": "default",
  "props": Array [
    Object {
      "defaultValue": Object {
        "func": false,
        "value": "'bar'",
      },
      "description": "Description of foo.",
      "name": "foo",
      "tags": Object {},
      "type": Object {
        "name": "string",
      },
    },
  ],
  "tags": Object {},
}
`;

exports[`Injects docgen result for non-SFC 1`] = `
Object {
  "description": "",
  "displayName": "basic.vue",
  "exportName": "MyButton",
  "props": Array [
    Object {
      "defaultValue": Object {
        "func": false,
        "value": "-1",
      },
      "description": "Foo the number.",
      "name": "foo",
      "tags": Object {},
      "type": Object {
        "name": "number",
      },
    },
  ],
  "tags": Object {},
}
`;
